# FLTest

./: .gitignore  README.md  USAGE.md  VALIDATOR_GUIDE.md  benchmark_summary.md  pyproject.toml  run.sh  run_all_frameworks.sh  run_benchmark.sh
bug_reports/: apple_pfl_research_cuda.md
examples/hooks/: README.md  __init__.py  atk_label_flip.py  fltest_hooks_a.py  fltest_hooks_b.py  fltest_hooks_template.py
experiments/config/: config.yaml  constants.yaml
experiments/scripts/: main.py  main_flower.py  run_flare.py  run_flower.py  run_pfl.py
fl_testing/config/: config.yaml  constants.yaml
fl_testing/config/experiment/: default.yaml
fl_testing/config/validation/examples/: full_grid.yaml  lr_sweep.yaml  pfl_test.yaml  rounds_sweep.yaml
fl_testing/data_preprocessing/: cifar10_loader.py  data_loader.py  pytorch_fl_dataset.py
fl_testing/federated/: utils.py
fl_testing/federated/apple_pfl/: client.py  install.sh  server.py
fl_testing/federated/flower/: client.py  server.py  utils.py
fl_testing/federated/nvidia_flare/: client.py  client_executor.py  server.py  test_flare.py
fl_testing/federated/nvidia_flare/src/: hello_fl.py  models.py
fl_testing/frameworks/: models.py  pytorch_fl_dataset.py  utils.py
fl_testing/frameworks/apple_pfl/: client.py  run_pfl.py  server.py
fl_testing/frameworks/flower/: client.py  run_flower.py  server.py  simulation.py  utils.py
fl_testing/frameworks/nvidia_flare/: client.py  client_executor.py  run_flare.py  server.py
fl_testing/models/pytorch/: lenet.py  models.py  simple_network.py
fl_testing/scripts/: main.py
fl_testing/tests/: test_run_flare.py
fl_testing/validator/: __init__.py  cli.py
fl_testing/validator/config/: __init__.py  parser.py  schema.py
fl_testing/validator/core/: __init__.py  experiment_runner.py  grid_generator.py
fl_testing/validator/output/: __init__.py  json_reporter.py
fl_testing/validator/rules/: __init__.py  base.py  bounded.py  monotonic.py  relative_threshold.py
flower_testing/: test_flower.py
fltest/: __init__.py  main.py
fltest/adapters/: __init__.py
fltest/adapters/flower/: __init__.py  client.py  server.py  simulation.py  utils.py
fltest/core/: __init__.py  hook_context.py  hook_runner.py  hooks.py
pfl_testing/: pyproject.toml  test.py
test/fl_testing/validator/e2e/: test_flower_rounds_sweep_e2e.py
